Fixed alignment on About paragraph

--- a/src/components/About/about.module.scss
+++ b/src/components/About/about.module.scss
@@ -39,7 +39,7 @@ $black-color: #1b1924;
     margin: 0%;
     display: flex;
     align-items: center;
-    margin-bottom: 1rem;
+    padding-left: 0.25em;
     .myNameFirst {
       font-size: 1.25em;
       color: $active-color;
@@ -56,9 +56,8 @@ $black-color: #1b1924;
     line-height: 35px;
     flex-grow: 1;
     margin: 0%;
-    margin-bottom: 1em;
+    padding: 1em 0.5em;
     font-size: 1.1em;
-    vertical-align: middle;
   }
   .photoBox {
     display: flex;
